--- a/motologger_app/pubspec.yaml
+++ b/motologger_app/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   permission_handler: ^12.0.1
-  flutter_blue_plus: 1.34.5   # 安定版に変更
+  flutter_blue_plus: ^1.31.16   # BLEライブラリ
+  provider: ^6.1.2              # 状態管理（軽くて丁度いい）
 
 dev_dependencies:
   flutter_test:
